# langchain-anthropic-pdf-support

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  anthropic_models_timeline.html  models.json  pdf_agent.py  pyproject.toml
.claude/agents/: agents-md-updater.md
.claude/skills/git-worktree/: SKILL.md
.claude/skills/git-worktree/scripts/: worktree.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  eval.yml
docs/: prompt-caching-analysis.md
evals/: __init__.py  conftest.py  test_pdf_agent_evals.py  test_pdf_agent_integration.py  test_pdf_agent_mocks.py  test_pdf_agent_performance.py
pdf_agent/: __init__.py  __main__.py  agent.py  api.py  core.py  logging_utils.py  prompts.py  server.py  tools.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_core.py  test_logging_utils.py  test_tools.py
