[project]
name = "langchain-anthropic-pdf-support"
version = "0.1.0"
description = "A simple LangChain agent with Anthropic Claude and PDF support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "poethepoet>=0.39.0",
    "ruff>=0.14.10",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["pdf_agent.py"]

[project.scripts]
pdf-agent = "pdf_agent:main"

[tool.poe.tasks]
dev = "python pdf_agent.py"
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check --fix ."
typecheck = "mypy pdf_agent.py"
check = ["lint", "format", "typecheck"]
outdated = "uv pip list --outdated"
upgrade = "uv lock --upgrade"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true
