[project]
name = "langchain-anthropic-pdf-support"
version = "0.1.0"
description = "A simple LangChain agent with Anthropic Claude and PDF support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.0",
    "langchain-anthropic>=1.3.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "deepeval>=3.7.8",
    "mypy>=1.19.1",
    "poethepoet>=0.39.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]

[tool.hatch.build.targets.wheel]
packages = ["pdf_agent"]

[project.scripts]
pdf-agent = "pdf_agent.__main__:main"

[tool.poe.tasks]
dev = "python -m pdf_agent"
dev-debug = { cmd = "python -m pdf_agent", env = { ANTHROPIC_LOG = "debug" } }
demo = "python -m pdf_agent https://www.w3.org/WAI/ER/tests/xhtml/testfiles/resources/pdf/dummy.pdf"
test = "pytest tests/ -v"
test-cov = "pytest tests/ -v --cov=pdf_agent --cov-report=term-missing"
lint = "ruff check ."
format = "ruff format ."
fix = "ruff check --fix ."
typecheck = "mypy pdf_agent"
check = ["lint", "format", "typecheck"]
ci = ["lint", "typecheck", "test"]
outdated = "uv pip list --outdated"
upgrade = "uv lock --upgrade"
pre-commit-install = "pre-commit install"
pre-commit-run = "pre-commit run --all-files"
eval = "deepeval test run evals/"
eval-verbose = "deepeval test run evals/ -v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["pdf_agent"]
branch = true
omit = ["pdf_agent/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
fail_under = 80
